--- a/estilos/principal.css
+++ b/estilos/principal.css
@@ -8,7 +8,7 @@
 }
     
 body, html{
-    width:  96vw;
+    width:  98vw;
     height: 100vh;
     background-color: #F0E6EF;
 }
@@ -50,6 +50,10 @@ i#burguer:hover{
     background-color: #aaa3a9;
 }
 
+menu{
+    display: none;
+}
+
 #menu > ul > li{
     list-style-type: none;
     
@@ -59,7 +63,6 @@ i#burguer:hover{
     margin-left: 4px;
     cursor: pointer;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.493);
-    dis
 }
 
 menu > ul > li > a{
