--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -29,11 +29,11 @@
     #menu{
         display: inline-block;
         width: 105px;
-        margin-left: 50px;
+        margin-bottom: 5px;
     }
 
     main{
-        width: 600px;
+        width: 700px;
         display: block;
         margin: auto;
         background-color: white;
@@ -43,7 +43,4 @@
         display: none;
     }
 
-    footer{
-        width: ;
-    }
 }
